day-two/database/pg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  selector:
    app: pg
  ports:
    - protocol: TCP
      port: 5432 # entry service port
      targetPort: 5432 # entry pod port
