day-two/database/pg-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pg-network-policy
spec:
  podSelector:
    matchLabels:
      app: pg
  policyTypes:
    - Ingress # trafic sortant
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
      ports:
        - protocol: TCP
          port: 5432
